--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -61,11 +61,11 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tvEstimasiAmount"
+                app:layout_constraintEnd_toStartOf="@+id/estimasi_amount"
                 android:layout_marginEnd="8dp" />
 
             <TextView
-                android:id="@+id/tvEstimasiAmount"
+                android:id="@+id/estimasi_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rp. 40.000,-"
