--- a/app/src/main/res/layout-land/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout-land/activity_tambah_pegawai.xml
@@ -5,13 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.raihanmahesa.pelanggan.TambahPelangganActivity">
+    tools:context="com.raihanmahesa.pegawai.TambahPegawaiActivity">
 
     <TextView
-        android:id="@+id/tvjudul"
+        android:id="@+id/tvpegawaijudul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_tambahpelanggan"
+        android:text="@string/text_tambahpegawai"
         android:textSize="20dp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/tvnama"
+        android:id="@+id/tvpegawainama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
@@ -28,80 +28,105 @@
         android:text="@string/text_namalengkap"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvjudul"
+        app:layout_constraintTop_toBottomOf="@+id/tvpegawaijudul"
         tools:ignore="MissingConstraints,TextSizeCheck" />
 
     <EditText
-        android:id="@+id/etnama"
+        android:id="@+id/etpegawainama"
         android:layout_width="600dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="21dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/text_namalengkap"
-        app:layout_constraintStart_toEndOf="@+id/tvnama"
-        app:layout_constraintTop_toBottomOf="@+id/tvjudul"
+        app:layout_constraintStart_toEndOf="@+id/tvpegawainama"
+        app:layout_constraintTop_toBottomOf="@+id/tvpegawaijudul"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/tvalamat"
+        android:id="@+id/tvpegawaialamat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="52dp"
         android:text="@string/card_alamat"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvnama"
+        app:layout_constraintTop_toTopOf="@+id/tvpegawainama"
         tools:ignore="MissingConstraints,TextSizeCheck" />
 
     <EditText
-        android:id="@+id/etalamat"
+        android:id="@+id/etpegawaialamat"
         android:layout_width="600dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="87dp"
+        android:layout_marginStart="78dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/card_alamat"
-        app:layout_constraintStart_toEndOf="@+id/tvalamat"
-        app:layout_constraintTop_toBottomOf="@+id/etnama"
+        app:layout_constraintStart_toEndOf="@+id/tvpegawaialamat"
+        app:layout_constraintTop_toBottomOf="@+id/etpegawainama"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/tvnohp"
+        android:id="@+id/tvpegawainohp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="32.5dp"
+        android:layout_marginTop="35dp"
         android:text="@string/card_nohp"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvalamat"
+        app:layout_constraintTop_toBottomOf="@+id/tvpegawaialamat"
         tools:ignore="MissingConstraints,TextSizeCheck" />
 
     <EditText
-        android:id="@+id/etnohp"
+        android:id="@+id/etpegawainohp"
         android:layout_width="600dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="90.5dp"
+        android:layout_marginStart="82dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/card_nohp"
-        app:layout_constraintStart_toEndOf="@id/tvnohp"
-        app:layout_constraintTop_toBottomOf="@+id/etalamat"
+        android:inputType="phone"
+        app:layout_constraintTop_toBottomOf="@+id/etpegawaialamat"
+        app:layout_constraintStart_toEndOf="@+id/tvpegawainohp"
+        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/tvpegawaicabang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="33dp"
+        android:text="@string/text_cabang"
+        android:textSize="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvpegawainohp"
+        tools:ignore="MissingConstraints,TextSizeCheck" />
+
+    <EditText
+        android:id="@+id/etpegawaicabang"
+        android:layout_width="600dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="74dp"
+        android:background="@drawable/rounded_edittext"
+        android:hint="@string/text_cabang"
+        app:layout_constraintStart_toEndOf="@+id/tvpegawaicabang"
+        app:layout_constraintTop_toBottomOf="@+id/etpegawainohp"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <Button
-        android:id="@+id/btsimpan"
+        android:id="@+id/btpegawaisimpan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_simpan"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etnohp"
+        app:layout_constraintTop_toBottomOf="@id/etpegawaicabang"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
