--- a/app/src/main/res/layout/activity_tambah_cabang.xml
+++ b/app/src/main/res/layout/activity_tambah_cabang.xml
@@ -5,103 +5,106 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.raihanmahesa.pelanggan.TambahPelangganActivity">
+    tools:context="com.raihanmahesa.cabang.TambahCabangActivity">
 
     <TextView
-        android:id="@+id/tvjudul"
+        android:id="@+id/tvcabangjudul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_tambahpelanggan"
+        android:text="@string/tambahCabang"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_marginTop="50dp"
         tools:ignore="MissingConstraints"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/tvnama"
+        android:id="@+id/tvcabangnama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="22dp"
-        android:text="@string/text_namalengkap"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/namacabang"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvjudul"
+        app:layout_constraintTop_toBottomOf="@+id/tvcabangjudul"
         tools:ignore="MissingConstraints,TextSizeCheck" />
 
     <EditText
-        android:id="@+id/etnama"
-        android:layout_width="600dp"
+        android:id="@+id/etcabangnama"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="30dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/text_namalengkap"
-        app:layout_constraintStart_toEndOf="@+id/tvnama"
-        app:layout_constraintTop_toBottomOf="@+id/tvjudul"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvcabangnama"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/tvalamat"
+        android:id="@+id/tvcabangalamat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
         android:text="@string/card_alamat"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvnama"
+        app:layout_constraintTop_toBottomOf="@+id/etcabangnama"
         tools:ignore="MissingConstraints,TextSizeCheck" />
 
     <EditText
-        android:id="@+id/etalamat"
-        android:layout_width="600dp"
+        android:id="@+id/etcabangalamat"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="87dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/card_alamat"
-        app:layout_constraintStart_toEndOf="@+id/tvalamat"
-        app:layout_constraintTop_toBottomOf="@+id/etnama"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvcabangalamat"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/tvnohp"
+        android:id="@+id/tvcabangnohp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="32.5dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
         android:text="@string/card_nohp"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvalamat"
+        app:layout_constraintTop_toBottomOf="@+id/etcabangalamat"
         tools:ignore="MissingConstraints,TextSizeCheck" />
 
     <EditText
-        android:id="@+id/etnohp"
-        android:layout_width="600dp"
+        android:id="@+id/etcabangnohp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="90.5dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/card_nohp"
-        app:layout_constraintStart_toEndOf="@id/tvnohp"
-        app:layout_constraintTop_toBottomOf="@+id/etalamat"
+        android:maxLength="14"
+        android:inputType="phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvcabangnohp"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <Button
-        android:id="@+id/btsimpan"
+        android:id="@+id/btcabangsimpan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_simpan"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etnohp"
+        app:layout_constraintTop_toBottomOf="@id/etcabangnohp"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
