--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -87,6 +87,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/card_nohp"
+        android:maxLength="14"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
