--- a/app/src/main/res/layout/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout/activity_tambah_pelanggan.xml
@@ -88,6 +88,7 @@
         android:background="@drawable/rounded_edittext"
         android:hint="@string/card_nohp"
         android:inputType="phone"
+        android:maxLength="14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvpelanggannohp"
