--- a/app/src/main/res/layout/card_data_layanan.xml
+++ b/app/src/main/res/layout/card_data_layanan.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cvCARD_LAYANAN"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp"
-    android:id="@+id/cvCARD_PELANGGAN"
     android:layout_marginTop="10dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
@@ -17,14 +17,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvCARD_PELANGGAN_ID"
+            android:id="@+id/tvCARD_LAYANAN_ID"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="#03A9F4"
+            android:background="#016113"
             android:gravity="center_vertical"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
-            android:text="@string/card_pelanggan"
+            android:text="@string/ID_Layanan"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             tools:ignore="TextContrastCheck" />
@@ -36,38 +36,31 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_nama"
+                android:id="@+id/tvCARD_LAYANAN_nama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/card_namapelanggan"
-                android:textSize="20sp"
+                android:text="@string/namalayanan"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="4dp"/>
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_alamat"
+                android:id="@+id/tvCARD_LAYANAN_harga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/card_alamat"
+                android:text="@string/harga"
                 android:textSize="14sp"
                 android:layout_marginBottom="2dp"/>
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_nohp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/card_nohp"
-                android:textSize="14sp"
-                android:layout_marginBottom="2dp"/>
-
-            <TextView
-                android:id="@+id/tvCARD_PELANGGAN_cabang"
+                android:id="@+id/tvCARD_LAYANAN_cabang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/card_cabang"
                 android:textSize="14sp"
                 android:layout_marginBottom="8dp"/>
 
+            <!-- Tombol Aksi -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
