--- a/app/src/main/res/layout/card_data_tambahan.xml
+++ b/app/src/main/res/layout/card_data_tambahan.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cvCARD_TAMBAHAN"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp"
-    android:id="@+id/cvCARD_PELANGGAN"
     android:layout_marginTop="10dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
@@ -17,14 +17,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvCARD_PELANGGAN_ID"
+            android:id="@+id/tvCARD_TAMBAHAN_ID"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="#03A9F4"
+            android:background="#D7068E"
             android:gravity="center_vertical"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
-            android:text="@string/card_pelanggan"
+            android:text="@string/ID_Tambahan"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             tools:ignore="TextContrastCheck" />
@@ -36,64 +36,29 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_nama"
+                android:id="@+id/tvCARD_TAMBAHAN_nama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/card_namapelanggan"
-                android:textSize="20sp"
+                android:text="@string/namatambahan"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="4dp"/>
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_alamat"
+                android:id="@+id/tvCARD_TAMBAHAN_harga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/card_alamat"
+                android:text="@string/harga"
                 android:textSize="14sp"
                 android:layout_marginBottom="2dp"/>
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_nohp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/card_nohp"
-                android:textSize="14sp"
-                android:layout_marginBottom="2dp"/>
-
-            <TextView
-                android:id="@+id/tvCARD_PELANGGAN_cabang"
+                android:id="@+id/tvCARD_TAMBAHAN_cabang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/card_cabang"
                 android:textSize="14sp"
                 android:layout_marginBottom="8dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <Button
-                    android:id="@+id/btn_hubungi"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/card_hubungi"
-                    android:backgroundTint="#22D10B"
-                    android:textColor="@android:color/white"
-                    android:layout_marginEnd="8dp"/>
-
-                <Button
-                    android:id="@+id/btn_lihat"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/card_lihat"
-                    android:backgroundTint="#E77A1B"
-                    android:textColor="@android:color/white"/>
-
-            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
