--- a/app/src/main/res/layout/activity_data_layanan.xml
+++ b/app/src/main/res/layout/activity_data_layanan.xml
@@ -7,6 +7,19 @@
     android:layout_height="match_parent"
     tools:context="com.raihanmahesa.layanan.DataLayananActivity">
 
+    <TextView
+        android:id="@+id/tvKosongLayanan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Belum ada layanan tersedia"
+        android:textColor="#888888"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDATA_LAYANAN"
         android:layout_width="match_parent"
