--- a/app/src/main/res/layout/activity_data_transaksi.xml
+++ b/app/src/main/res/layout/activity_data_transaksi.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
     android:background="#FFF9FF"
     android:padding="16dp">
 
@@ -32,6 +33,7 @@
                 android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+                <!-- TextView Nilai -->
 
             <TextView
                 android:id="@+id/tvNamaPelanggan"
@@ -43,7 +45,7 @@
                 android:layout_marginTop="8dp" />
 
             <TextView
-                android:id="@+id/tvNoHp"
+                android:id="@+id/tvPelangganNoHP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="No HP:"
@@ -58,7 +60,7 @@
                 android:text="Pilih Pelanggan"
                 android:textColor="#FFFFFF"
                 android:backgroundTint="#00BEFF"
-                app:layout_constraintTop_toBottomOf="@id/tvNoHp"
+                app:layout_constraintTop_toBottomOf="@id/tvPelangganNoHP"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp" />
@@ -85,7 +87,7 @@
                 android:layout_marginTop="8dp" />
 
             <TextView
-                android:id="@+id/tvHarga"
+                android:id="@+id/tvLayananHarga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Harga:"
@@ -100,7 +102,7 @@
                 android:text="Pilih Layanan"
                 android:textColor="#FFFFFF"
                 android:backgroundTint="#00BFFF"
-                app:layout_constraintTop_toBottomOf="@id/tvHarga"
+                app:layout_constraintTop_toBottomOf="@id/tvLayananHarga"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp" />
@@ -118,7 +120,6 @@
                 android:layout_marginTop="24dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvLayananTambahan"
