--- a/app/src/main/res/layout/activity_invoice.xml
+++ b/app/src/main/res/layout/activity_invoice.xml
@@ -197,81 +197,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Additional Service 1 -->
-    <TextView
-        android:id="@+id/tv_additional_service_number_1"
-        android:layout_width="24dp"
-        android:layout_height="32dp"
-        android:textSize="14sp"
-        android:textColor="@android:color/white"
-        android:gravity="center"
-        android:background="#E53935"
+    <!-- RecyclerView for Additional Services -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_additional_services"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:nestedScrollingEnabled="false"
         app:layout_constraintTop_toBottomOf="@id/tv_additional_services_header"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_additional_service_1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Pewangi Aroma Terapi"
-        android:textSize="14sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/tv_additional_service_number_1"
-        app:layout_constraintBottom_toBottomOf="@id/tv_additional_service_number_1"
-        app:layout_constraintStart_toEndOf="@id/tv_additional_service_number_1"
-        app:layout_constraintEnd_toStartOf="@id/tv_additional_service_price_1" />
-
-    <TextView
-        android:id="@+id/tv_additional_service_price_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rp9.000,00"
-        android:textSize="14sp"
-        android:textAlignment="textEnd"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="@id/tv_additional_service_number_1"
-        app:layout_constraintBottom_toBottomOf="@id/tv_additional_service_number_1"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Additional Service 2 -->
-    <TextView
-        android:id="@+id/tv_additional_service_number_2"
-        android:layout_width="24dp"
-        android:layout_height="32dp"
-        android:textSize="14sp"
-        android:textColor="@android:color/white"
-        android:gravity="center"
-        android:background="#E53935"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_additional_service_number_1"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_additional_service_2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Pemutih Pakaian"
-        android:textSize="14sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/tv_additional_service_number_2"
-        app:layout_constraintBottom_toBottomOf="@id/tv_additional_service_number_2"
-        app:layout_constraintStart_toEndOf="@id/tv_additional_service_number_2"
-        app:layout_constraintEnd_toStartOf="@id/tv_additional_service_price_2" />
-
-    <TextView
-        android:id="@+id/tv_additional_service_price_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rp5.000,00"
-        android:textSize="14sp"
-        android:textAlignment="textEnd"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="@id/tv_additional_service_number_2"
-        app:layout_constraintBottom_toBottomOf="@id/tv_additional_service_number_2"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/tv_subtotal_additional_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="200dp" />
 
     <!-- Subtotal Additional Services -->
     <TextView
@@ -282,14 +221,14 @@
         android:textSize="14sp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_additional_service_number_2"
+        app:layout_constraintTop_toBottomOf="@id/rv_additional_services"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_subtotal_additional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rp14.000,00"
+        android:text="Rp0"
         android:textSize="14sp"
         android:textAlignment="textEnd"
         android:layout_marginEnd="20dp"
